fixed tests, added intensity normalization